# proyecto-gpu

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: image.hpp  image_loader.hpp
kernel/: ascii-color.cl  ascii-gray.cl  mult.cl
src/: image_loader.cpp  main.cpp  test_image.cpp
src/ascii/: ascii_art.cpp  ascii_art.hpp  cl_runner.cpp  cl_runner.h  cl_runner.hpp  cpu_runner.cpp  cpu_runner.hpp
